--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
     <section id="produtos" class="produtos">
         <div class="container">
             <h2>Nossos Brownies</h2>
+            
             <div class="produtos-grid">
 
                 <!-- Brownie Tradicional -->
                 <div class="produto-card">
                     <div class="produto-imagem">
-                        <img src="https://images.unsplash.com/photo-1606313564200-e75d5e30476c?auto=format&fit=crop&w=500&q=60" alt="Brownie Tradicional">
+                          <img src="https://i.pinimg.com/1200x/c9/c0/d2/c9c0d2012d00803b0e01e82d62cfe17c.jpg" alt="Brownie Tradicional">
                     </div>
                     <div class="produto-info">
                         <h3>Brownie Tradicional</h3>
-                        <p>Nosso clássico brownie de chocolate, com textura macia por dentro e crocante por fora.</p>
+                        <h4>R$ 8,00</h4>
+                        <p>Nosso clássico brownie de chocolate nobre , com textura macia por dentro e crocante por fora.</p>
 
                         <div class="produto-quantidade">
                             <button class="btn-quantidade menos">-</button>
@@ -64,14 +66,15 @@
                     </div>
                 </div>
 
-                <!-- Brownie com Doce de Leite -->
+                <!-- Brownie com Nozes -->
                 <div class="produto-card">
                     <div class="produto-imagem">
-                        <img src="https://images.unsplash.com/photo-1589375025852-a66cca98a805?auto=format&fit=crop&w=500&q=60" alt="Brownie com Doce de Leite">
+                        <img src="https://i.pinimg.com/1200x/a0/90/76/a09076501665efe8b79c71b68618f8f6.jpg" alt="Brownie de Nutella">
                     </div>
                     <div class="produto-info">
-                        <h3>Brownie com Doce de Leite</h3>
-                        <p>Delicioso brownie de chocolate com recheio cremoso de doce de leite artesanal.</p>
+                        <h3>Brownie com Nozes</h3>
+                        <h4>R$ 8,90</h4>
+                        <p>Brownie de chocolate nobre com pedacinhos crocantes de nozes — sabor clássico e irresistível.</p>
 
                         <div class="produto-quantidade">
                             <button class="btn-quantidade menos">-</button>
@@ -79,18 +82,19 @@
                             <button class="btn-quantidade mais">+</button>
                         </div>
 
-                        <button class="btn-pedido" data-produto="Brownie com Doce de Leite">Fazer Pedido</button>
+                        <button class="btn-pedido" data-produto="Brownie com Nozes">Fazer Pedido</button>
                     </div>
                 </div>
 
-                <!-- Brownie de Ninho com Nutella -->
+                <!-- Brownie de Nutella -->
                 <div class="produto-card">
                     <div class="produto-imagem">
-                        <img src="https://images.unsplash.com/photo-1590841609987-4ac211afdde1?auto=format&fit=crop&w=500&q=60" alt="Brownie de Ninho com Nutella">
+                        <img src="https://i.pinimg.com/736x/c4/67/71/c467719c44cb3150ef3f74ca14b82cb7.jpg" alt="Brownie de Nutella">
                     </div>
                     <div class="produto-info">
-                        <h3>Brownie de Ninho com Nutella</h3>
-                        <p>Irresistível brownie com camadas de leite ninho e nutella, uma combinação perfeita.</p>
+                        <h3>Brownie de Nutella</h3>
+                        <h4>R$ 9,90</h4>
+                        <p>Irresistível brownie com camadas de nutella, uma combinação perfeita.</p>
 
                         <div class="produto-quantidade">
                             <button class="btn-quantidade menos">-</button>
