--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <button class="btn-quantidade mais">+</button>
                         </div>
 
-                        <button class="btn-pedido" data-produto="Brownie de Ninho com Nutella">Fazer Pedido</button>
+                        <button class="btn-pedido" data-produto="Brownie de Nutella">Fazer Pedido</button>
                     </div>
                 </div>
 
