--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div class="logo">
                 <h1>Bendito Brownie & Cacau</h1>
                 <p>Brownies artesanais feitos com amor</p>
+                
+            </div>
+            <div>
+                <img src="logo.png" alt="Logo Bendito Brownie & Cacau">
             </div>
             <nav>
                 <ul>
@@ -122,7 +126,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Delícia Brownie. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Bendito Brownie. Todos os direitos reservados.</p>
         </div>
     </footer>
 
