--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Bendito Brownie & Cacau</h1>
-                <p>Brownies artesanais feitos com amor</p>
+                <h1>Bendito Brownie</h1>
+                <p>feito com amor e paixão</p>
                 
             </div>
             <div>
