alterando os preços

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>Brownies Artesanais</h2>
+            <h2>Brownies Gourmet</h2>
             <p>Feitos com ingredientes selecionados e muito amor</p>
             <a href="#produtos" class="btn-primary">Peça Agora</a>
         </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="produto-info">
                         <h3>Brownie Tradicional</h3>
-                        <h4>R$ 8,00</h4>
+                        <h4>R$ 8,90</h4>
                         <p>Nosso clássico brownie de chocolate nobre , com textura macia por dentro e crocante por fora.</p>
 
                         <div class="produto-quantidade">
@@ -77,7 +77,7 @@
                     </div>
                     <div class="produto-info">
                         <h3>Brownie com Nozes</h3>
-                        <h4>R$ 8,90</h4>
+                        <h4>R$ 9,00</h4>
                         <p>Brownie de chocolate nobre com pedacinhos crocantes de nozes — sabor clássico e irresistível.</p>
 
                         <div class="produto-quantidade">
@@ -97,7 +97,7 @@
                     </div>
                     <div class="produto-info">
                         <h3>Brownie de Nutella</h3>
-                        <h4>R$ 9,90</h4>
+                        <h4>R$ 13,00</h4>
                         <p>Irresistível brownie com camadas de nutella, uma combinação perfeita.</p>
 
                         <div class="produto-quantidade">
@@ -109,6 +109,8 @@
                         <button class="btn-pedido" data-produto="Brownie de Nutella">Fazer Pedido</button>
                     </div>
                 </div>
+
+                
 
             </div>
         </div>
